# generate-ja-tts

./: .gitignore  Dockerfile  README.md  check_dataset.py  data_speech.py  docker-compose.yml  gen.sh  generate_ja_tts.ipynb  main.py  pyproject.toml  train.sh
dataset/: voiceactress100_ex.csv
dataspeech/: __init__.py
dataspeech/cpu_enrichments/: __init__.py  rate.py
dataspeech/gpu_enrichments/: __init__.py  pitch.py  snr_and_reverb.py  squim.py
eval_dataset/: analyze_snr_pesq.py  calc_duration.py  calc_eer.py  calc_eer_replay.py  calc_eer_with_embedding.py  ecapa_matrix.py  phoneme_coverage.py
eval_dataset_results/: analyze_snr_pesq_ayuto.txt  analyze_snr_pesq_hinako.txt  analyze_snr_pesq_hiroki.txt  analyze_snr_pesq_jsut.txt  analyze_snr_pesq_mako.txt  analyze_snr_pesq_olimov.txt  audio_duration_ayuto.txt  audio_duration_hinako.txt  audio_duration_hiroki.txt  audio_duration_jsut.txt  audio_duration_mako.txt  audio_duration_olimov.txt  embeddings_cache.pkl  statistics_ayuto.txt  statistics_hinako.txt  statistics_hiroki.txt  statistics_jsut.txt  statistics_mako.txt  statistics_olimov.txt
generated_sound/src/: ecapa_confusion_matrix.py  format_to_datasets.py  gen_high_score.py  play_model.py
helpers/gradio_demo/: app.py
scripts/: filter_audio_separation.py  merge_audio_to_metadata.py  metadata_to_text.py  run_prompt_creation.py  run_prompt_creation_llm_swarm.py
src/: cuda_check.py  ecapa_confusion_matrix.py  format_to_datasets.py  play_model.py
training/: README.md  arguments.py  data.py  eval.py  run_parler_tts_training.py  utils.py
wandb/: latest-run
(+180 files in other folders)
